k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-demo-app
  namespace: sre-demo
  labels:
    app: sre-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-demo-app
  template:
    metadata:
      labels:
        app: sre-demo-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: sre-demo-app
        image: docker.io/demight24/sre-demo-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
