k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-demo-service
  namespace: sre-demo
  labels:
    app: sre-demo-app
spec:
  type: ClusterIP
  selector:
    app: sre-demo-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
